updated localhost to api.badgepirates.com

--- a/frontend/src/app/contact/contact.component.html
+++ b/frontend/src/app/contact/contact.component.html
@@ -13,7 +13,7 @@
         <div class="row">
           <div class="col-md-12">
                 <div class="contact-form">
-                   <form id="contact-form" method="post" action="http://localhost:8080/contact"> <!-- Start Contact From -->
+                   <form id="contact-form" method="post" action="https://api.badgepirates.com/contact"> <!-- Start Contact From -->
                    <div class="messages"></div>
                       <div class="controls">
                           <div class="row">
