update price and api stuff

--- a/frontend/src/app/order/order.component.html
+++ b/frontend/src/app/order/order.component.html
@@ -12,8 +12,8 @@
               <div class="tab-content">
                   <div> <!-- Single Tab -->
                      <h4 class="about-heading">Pre-order <span>SecKC Defcon 26</span> badge now!</h4>
-                      <p>Preorder the official SecKC Defcon 26 badge now and save! Only $35 right now.  The price will be going up to $50 soon!</p>
-                      <button class="btn btn-effect btn-sent" (click)="openCheckout()">$35 Order Now!</button>
+                      <p>Preorder the official SecKC Defcon 26 badge now and save! Only $45 right now.  The price will be going up soon!</p>
+                      <button class="btn btn-effect btn-sent" (click)="openCheckout()">$45 Order Now!</button>
                   </div>
               </div>
             </div>
