cleaned up about us and added titles to each section

--- a/frontend/src/app/about/about.component.html
+++ b/frontend/src/app/about/about.component.html
@@ -2,6 +2,14 @@
 <div id="about" class="about-area section-padding">
     <div class="container">
         <div class="row">
+            <div class="col-md-12 col-sm-12 col-xs-12">
+              <div class="section-title">
+               <h2>about us.</h2>
+                  <p>meet the hackers</p>
+               </div>
+            </div>
+        </div> <!--/.row-->
+        <div class="row">
             <div class="col-md-5">
                <div class="author-image">
                     <img src="assets/img/AboutUsImage.png" alt="Author Image"> <!--=== about image ===-->
@@ -17,8 +25,7 @@
                     <div class="tab-content">
                         <div role="tabpanel" class="tab-pane fade in active" id="Section1"> <!-- Single Tab -->
                            <h4 class="about-heading">We're a small group of <span>hackers</span> & <span>makers</span></h4>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                            <p>We build electronic badges for security conferences for fun and no profit.  Each badge is painstakingly designed and built with unique surprises and attention to detail.  We are available for hire to design and build a badge for your next big event!</p>
                             <ul class="social-links"> <!--=== social-links ===-->
                                 <li><a href="https://twitter.com/BadgePirates"><i class="fa fa-twitter"></i></a></li>
                                 <li><a href="https://github.com/BadgePiratesLLC"><i class="fa fa-github"></i></a></li>
