--- a/frontend/src/app/order/order.component.html
+++ b/frontend/src/app/order/order.component.html
@@ -2,6 +2,14 @@
 <div id="order" class="about-area section-padding">
     <div class="container">
         <div class="row">
+            <div class="col-md-12 col-sm-12 col-xs-12">
+              <div class="section-title">
+               <h2>order.</h2>
+                  <p>Order our latest badge</p>
+               </div>
+            </div>
+        </div> <!--/.row-->
+        <div class="row">
             <div class="col-md-5">
                <div class="author-image">
                     <img src="assets/img/badges/defcon/26/SecKCDC26_P_FZ_700x466.png" alt="SecKC Defcon 26 Image"> <!--=== about image ===-->
