flipped image, added more badge details

--- a/frontend/src/app/order/order.component.html
+++ b/frontend/src/app/order/order.component.html
@@ -20,7 +20,26 @@
               <div class="tab-content">
                   <div> <!-- Single Tab -->
                      <h4 class="about-heading">Pre-order <span>SecKC Defcon 26</span> badge now!</h4>
-                      <p>Preorder the official SecKC Defcon 26 badge now and save! Only $55 right now.  The price will be going up soon!</p>
+                      <p>Preorder the official SecKC Defcon 26 badge now and save! Only $55 right now.</p>
+                      <p>Platform: WROOM Esp32 (WiFi, BLE) on board with 42 Charlie Plex LED.</p>
+
+                      <p>Features:</p>
+                      <ul>
+                        <li>Several different LED patterns</li>
+                        <li>Hackable with Attachable Daughter Board</li>
+                        <li>FTDI connection using Arduino IDE</li>
+                        <li>#BadgeLife Shitty Add-On Connector</li>
+                        <li>2x AAA Battery</li>
+                        <li>Components SMD 1206 and 0603 Foot Print</li>
+                      </ul>
+
+                      <p>Hack My Badge Instructions:</p>
+                        <ul>
+                          <li>Adding a LIPO and Charger - Coming Soon</li>
+                          <li>Add a NeoPixel Bling Ring - Coming Soon</li>
+                        </ul>
+
+                      <p>Delivery to DefCon, Follow our Twitter for Times and locations</p>
                       <button class="btn btn-effect btn-sent" (click)="openCheckout()">$55 Order Now!</button>
                   </div>
               </div>
