quick add of seckc SAO

--- a/frontend/src/app/order/order.component.html
+++ b/frontend/src/app/order/order.component.html
@@ -12,36 +12,27 @@
         <div class="row">
             <div class="col-md-5">
                <div class="author-image">
-                    <img src="assets/img/badges/defcon/26/SecKCDC26_P_FZ_700x466.png" alt="SecKC Defcon 26 Image"> <!--=== about image ===-->
+                    <img src="assets/img/badges/defcon/26/seckcdefcon26vippartysao.jpg" alt="SecKC Defcon 26 Image"> <!--=== about image ===-->
                 </div>
             </div>
 
             <div class="col-md-7">
               <div class="tab-content">
-                  <div> <!-- Single Tab -->
-                     <h4 class="about-heading">Pre-order <span>SecKC Defcon 26</span> badge now!</h4>
-                      <p>Preorder the official SecKC Defcon 26 badge now and save! Only $65 right now.</p>
-                      <p>Platform: WROOM Esp32 (WiFi, BLE) on board with 42 Charlie Plex LED.</p>
+                 <h4 class="about-heading">A limited edition, VIP token for SecKC the World, he official DEFCON <strong>SecKC</strong> party.</h4>
+                 <p>Put this on any of the DEFCON badges or throw it on a lanyard
+                 by itself.</p>
+                 <p><b>Pickup at DEFCON with your receipt. SecKC members who cannot attend DEFCON can pickup at the
+                 August SecKC meeting.</b></p>
 
-                      <p>Features:</p>
-                      <ul>
-                        <li>Several different LED patterns</li>
-                        <li>Hackable with Attachable Daughter Board</li>
-                        <li>FTDI connection using Arduino IDE</li>
-                        <li>#BadgeLife Shitty Add-On Connector</li>
-                        <li>2x AAA Battery</li>
-                        <li>Components SMD 1206 and 0603 Foot Print</li>
-                      </ul>
+                 <p>$5 gets you:</p>
+                 <ul>
+                   <li>One VIP shitty add on</li>
+                   <li>At least one SecKC shot</li>
+                   <li>Access to secret party surprises</li>
+                 </ul>
 
-                      <p>Hack My Badge Instructions:</p>
-                        <ul>
-                          <li>Adding a LIPO and Charger - Coming Soon</li>
-                          <li>Add a NeoPixel Bling Ring - Coming Soon</li>
-                        </ul>
-
-                      <p>Delivery to DefCon, Follow our Twitter for Times and locations</p>
-                      <button class="btn btn-effect btn-sent" (click)="openCheckout()">$65 Order Now!</button>
-                  </div>
+                <p>Photo Credit: Myung Kang</p>
+                <button class="btn btn-effect btn-sent" (click)="openCheckout()">$5 Order Now!</button>
               </div>
             </div>
         </div> <!--/.row-->
