fix spelling error

--- a/frontend/src/app/order/order.component.html
+++ b/frontend/src/app/order/order.component.html
@@ -18,7 +18,7 @@
 
             <div class="col-md-7">
               <div class="tab-content">
-                 <h4 class="about-heading">A limited edition, VIP token for SecKC the World, he official DEFCON <strong>SecKC</strong> party.</h4>
+                 <h4 class="about-heading">A limited edition, VIP token for SecKC the World, The official DEFCON <strong>SecKC</strong> party.</h4>
                  <p>Put this on any of the DEFCON badges or throw it on a lanyard
                  by itself.</p>
                  <p><b>Pickup at DEFCON with your receipt. SecKC members who cannot attend DEFCON can pickup at the
