--- a/frontend/src/app/order/order.component.html
+++ b/frontend/src/app/order/order.component.html
@@ -19,7 +19,8 @@
             <div class="col-md-7">
               <div class="tab-content">
                 <div class="row">
-                   <h4 class="about-heading">A limited edition, VIP token for SecKC the World, he official DEFCON <strong>SecKC</strong> party.</h4>
+                  <div class="container">
+                   <h4 class="about-heading">A limited edition, VIP token for SecKC the World, The official DEFCON <strong>SecKC</strong> party.</h4>
                    <p>Put this on any of the DEFCON badges or throw it on a lanyard
                    by itself.</p>
                    <p><b>Pickup at DEFCON with your receipt. SecKC members who cannot attend DEFCON can pickup at the
@@ -33,6 +34,7 @@
                    </ul>
 
                   <p>Photo Credit: Myung Kang</p>
+                </div>
                 </div>
                 <div class="row">
                   <div class="col-sm-4">
