--- a/frontend/src/app/order/order.component.html
+++ b/frontend/src/app/order/order.component.html
@@ -5,10 +5,57 @@
             <div class="col-md-12 col-sm-12 col-xs-12">
               <div class="section-title">
                <h2>order.</h2>
-                  <p>Order our latest badge</p>
+                  <p>Order our latest badges</p>
                </div>
             </div>
         </div> <!--/.row-->
+
+        <div class="row">
+            <div class="col-md-5">
+               <div class="author-image">
+                    <img src="assets/img/badges/defcon/26/full_badge_set_dc26.jpg" alt="SecKC Defcon 26 Image"> <!--=== about image ===-->
+                </div>
+            </div>
+
+            <div class="col-md-7">
+              <div class="tab-content">
+                  <div class="row"> <!-- Single Tab -->
+                     <h3>SecKC Official Defcon 26 Badge</h3>
+                     <h4 class="about-heading">Pre-order <span>SecKC Defcon 26</span> badge now!</h4>
+                      <p>Preorder the official SecKC Defcon 26 badge now and save! Only $65 right now.</p>
+                      <p>Platform: WROOM Esp32 (WiFi, BLE) on board with 42 Charlie Plex LED.</p>
+
+                      <p>Features:</p>
+                      <ul>
+                        <li>Several different LED patterns</li>
+                        <li>Hackable with Attachable Daughter Board</li>
+                        <li>FTDI connection using Arduino IDE</li>
+                        <li>#BadgeLife Shitty Add-On Connector</li>
+                        <li>2x AAA Battery</li>
+                        <li>Components SMD 1206 and 0603 Foot Print</li>
+                      </ul>
+
+                      <p>Hack My Badge Instructions:</p>
+                        <ul>
+                          <li>Adding a LIPO and Charger - Coming Soon</li>
+                          <li>Add a NeoPixel Bling Ring - Coming Soon</li>
+                        </ul>
+
+                      <p>Delivery to DefCon, Follow our Twitter for Times and locations</p>
+                      <div class="row">
+                        <div class="col-sm-4">
+                          <label for="badgeCount">Num Badges: </label>
+                          <input type="number" min="1" max="999" class="badge-count-input" #badgeCount (keyup)="updateBadgeCount(badgeCount.value); "  value="1" required>
+                        </div>
+                        <div class="col-sm-8">
+                          <button class="btn btn-effect btn-sent" (click)="openBadgeCheckout()">${{this.badgeDisplayTotal}} Order Now!</button>
+                        </div>
+                      </div>
+                  </div>
+              </div>
+            </div>
+        </div> <!--/.row-->
+        <hr>
         <div class="row">
             <div class="col-md-5">
                <div class="author-image">
@@ -19,7 +66,7 @@
             <div class="col-md-7">
               <div class="tab-content">
                 <div class="row">
-                  <div class="container">
+                  <h3>SecKC the World SAO</h3>
                    <h4 class="about-heading">A limited edition, VIP token for SecKC the World, The official DEFCON <strong>SecKC</strong> party.</h4>
                    <p>Put this on any of the DEFCON badges or throw it on a lanyard
                    by itself.</p>
@@ -35,14 +82,13 @@
 
                   <p>Photo Credit: Myung Kang</p>
                 </div>
-                </div>
                 <div class="row">
                   <div class="col-sm-4">
-                    <label for="badgeCount">Num Badges: </label>
-                    <input type="number" min="1" max="999" class="badge-count-input" #badgeCount (keyup)="updateBadgeCount(badgeCount.value); "  value="1" required>
+                    <label for="saoBadgeCount">Num Badges: </label>
+                    <input type="number" min="1" max="999" class="badge-count-input" #saoBadgeCount (keyup)="updateSAOBadgeCount(saoBadgeCount.value); "  value="1" required>
                   </div>
                   <div class="col-sm-8">
-                    <button class="btn btn-effect btn-sent" (click)="openCheckout()">${{this.badgeDisplayTotal}} Order Now!</button>
+                    <button class="btn btn-effect btn-sent" (click)="openSAOCheckout()">${{this.saoBadgeDisplayTotal}} Order Now!</button>
                   </div>
                 </div>
               </div>
