--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -6,7 +6,7 @@
 </div>
 <app-header></app-header>
 <app-home></app-home>
+<app-order></app-order>
 <app-about></app-about>
 <app-badges></app-badges>
-<app-contact></app-contact>
 <app-footer></app-footer>
