added dc26 badge back, added new phone number, and cleaned up some older stuff

--- a/frontend/src/app/about/about.component.html
+++ b/frontend/src/app/about/about.component.html
@@ -27,6 +27,7 @@
                            <h4 class="about-heading">We're a small group of <span>hackers</span> & <span>makers</span></h4>
                             <p>We build electronic badges for security conferences for fun and no profit.  Each badge is painstakingly designed and built with unique surprises and attention to detail.  We are available for hire to design and build a badge for your next big event!</p>
                             <ul class="social-links"> <!--=== social-links ===-->
+                                <li><a href="tel:+8167886732"><i class="fa fa-phone"></i></a></li>
                                 <li><a href="https://twitter.com/BadgePirates"><i class="fa fa-twitter"></i></a></li>
                                 <li><a href="https://github.com/BadgePiratesLLC"><i class="fa fa-github"></i></a></li>
                             </ul>
