--- a/frontend/src/app/order/order.component.html
+++ b/frontend/src/app/order/order.component.html
@@ -9,7 +9,7 @@
                </div>
             </div>
         </div> <!--/.row-->
-        <hr>
+
         <div class="row">
             <div class="col-md-5">
                <div class="author-image">
@@ -37,56 +37,23 @@
 
                       <p>Hack My Badge Instructions:</p>
                         <ul>
-                          <li>Adding a LIPO and Charger - Coming Soon</li>
-                          <li>Add a NeoPixel Bling Ring - Coming Soon</li>
+                          <li><a href="https://github.com/BadgePiratesLLC/SecKCDC26/tree/master" target="_blank">Full Github Repo with all code and board designs</a></li>
+                            <li><a href="https://github.com/BadgePiratesLLC/SecKCDC26/tree/master/BadgeCode" target="_blank">Stock badge code</a></li>
+                          <li><a href="https://github.com/BadgePiratesLLC/SecKCDC26/tree/master/Tutorials/Lipo" target="_blank">Adding a LIPO and Charger</a></li>
+                          <li><a href="https://github.com/BadgePiratesLLC/SecKCDC26/tree/master/Tutorials/Cotcha" target="_blank">Turn your badge intoa Cotcha</a></li>
                         </ul>
 
                       <p>Delivery to DefCon, Follow our Twitter for Times and locations</p>
                       <div class="row">
                         <div class="col-sm-4">
+                          <label for="badgeCount">Num Badges: </label>
+                          <input type="number" min="1" max="999" class="badge-count-input" #badgeCount (keyup)="updateBadgeCount(badgeCount.value); "  value="1" required>
                         </div>
                         <div class="col-sm-8">
-                          <button disabled class="btn btn-effect btn-sent">Sold Out</button>
+                          <button class="btn btn-effect btn-sent" (click)="openBadgeCheckout()">${{this.badgeDisplayTotal}} Order Now!</button>
                         </div>
                       </div>
                   </div>
-              </div>
-            </div>
-        </div> <!--/.row-->
-        <hr>
-        <div class="row">
-            <div class="col-md-5">
-               <div class="author-image">
-                    <img src="assets/img/badges/defcon/26/seckcdefcon26vippartysao.jpg" alt="SecKC Defcon 26 Image"> <!--=== about image ===-->
-                </div>
-            </div>
-
-            <div class="col-md-7">
-              <div class="tab-content">
-                <div class="row">
-                  <h3>SecKC the World SAO</h3>
-                   <h4 class="about-heading">A limited edition, VIP token for SecKC the World, The official DEFCON <strong>SecKC</strong> party.</h4>
-                   <p>Put this on any of the DEFCON badges or throw it on a lanyard
-                   by itself.</p>
-                   <p><b>Pickup at DEFCON with your receipt. SecKC members who cannot attend DEFCON can pickup at the
-                   August SecKC meeting.</b></p>
-
-                   <p>$10 gets you:</p>
-                   <ul>
-                     <li>One VIP shitty add on</li>
-                     <li>At least one SecKC shot</li>
-                     <li>Access to secret party surprises</li>
-                   </ul>
-
-                  <p>Photo Credit: Myung Kang</p>
-                </div>
-                <div class="row">
-                  <div class="col-sm-4">
-                  </div>
-                  <div class="col-sm-8">
-                    <button disabled class="btn btn-effect btn-sent">Sold Out</button>
-                  </div>
-                </div>
               </div>
             </div>
         </div> <!--/.row-->
