--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -5,8 +5,4 @@
     <div class="loader-section section-right"></div>
 </div>
 <app-header></app-header>
-<app-home></app-home>
-<app-order></app-order>
-<app-about></app-about>
-<app-badges></app-badges>
-<app-footer></app-footer>
+<router-outlet></router-outlet>
